--- a/index.html
+++ b/index.html
@@ -36,15 +36,37 @@
         </p>
     </section>
 
-    <div></div>
+    <div class="background--image3">
+        <div class="heading-container">
+            <span class="heading-container__text">Way To Reinvert Yourself</span>
+        </div>
+    </div>
 
-    <section></section>
+    <section class="section section-light">
+        <h2>Data Analytics & Machine Learning</h2>
+        <p>
+            Extract knowledge and insights from different data types, Use scientific methods, processes, algorithms, and systems in this interdisciplinary field and <b>get the essential skills expected from a data scientist.</b> By this program, in addition to learn how to build complex quantitative algorithms and synhtesize large amounts of information, <b>gain the leadership and communication skills</b> necessary to deliver measurable and tangible results to a variety of business stakeholders!
+        </p>
+    </section>
 
-    <div></div>
+    <div class="background--image4">
+        <div class="heading-container">
+            <span class="heading-container__text">Clarusway Team</span>
+        </div>
+    </div>
 
-    <section></section>
+    <section class="section section--dark">
+        <h2>Why Clarusway</h2>
+        <p>
+            From beginners to intermediate level students, our curated content will meet your unique needs. Our proven curriculum and experienced instructors take you through the process step by step. Each student is provided with a mentor tutoring support and educational advice throughout the program. Your access to support 24/7 ensures success our chat/call system differentiates our program.Clarusway provides quality IT training with reasonable proces to prepare individuals for next-generation jobs! From beginners to IT professionals, we offer cutting-edge programs used today by leading corporations. 
+        </p>
+    </section>
 
-    <div></div>
+    <div class="background--image1">
+        <div class="heading-container">
+            <span class="heading-container__heading">Choose your Future</span>
+        </div>
+    </div>
 
 </body>
 </html>
