--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <section class="section section--dark">
+    <section class="section section-dark">
         <h2>Why Clarusway</h2>
         <p>
             From beginners to intermediate level students, our curated content will meet your unique needs. Our proven curriculum and experienced instructors take you through the process step by step. Each student is provided with a mentor tutoring support and educational advice throughout the program. Your access to support 24/7 ensures success our chat/call system differentiates our program.Clarusway provides quality IT training with reasonable proces to prepare individuals for next-generation jobs! From beginners to IT professionals, we offer cutting-edge programs used today by leading corporations. 
